<resources>

    <string name="app_name">Bannkazu</string>
    <string name="str_layout_settings_specific_h1">三人鬥地主說明</string>
    <string name="str_layout_settings_specific_c1">
        胜负判定\n\n
        任意一家出完牌后结束游戏，若是地主先出完牌则地主胜，否则另外两家胜。\n\n

        积分\n\n
        底分：叫牌的分数\n
        番数：初始为1，每出一个炸弹或火箭翻一倍。（火箭和炸弹留在手上没出的不算）\nn

        一局结束后： \n
        地主胜：地主得分为 2* 底分 * 倍数。 其余玩家各得： - 底分 * 倍数 \n
        地主败：地主得分为 -2* 底分 * 倍数。 其余玩家各得：底分 * 倍数 \n
        农民春天：地主所有牌出完，其他两家一张都未出： 分数 * 2 \n
        地主春天：其他两家中有一家先出完牌，地主只出过一手牌： 分数 * 2\n\n
    </string>
    <string name="str_layout_settings_specific_h2">五人鬥地主說明</string>
    <string name="str_layout_settings_specific_c2">
        胜负判定\n\n
        任意一家出完牌后结束游戏，若是地主先出完牌则地主胜，否则农民胜。\n\n

        积分\n\n
        单地主农民胜负基本分为±3，地主为±12；\n
        双地主时农民胜负基本分为±6，地主为±9；\n
        每出一个炸弹或火箭翻一倍。（火箭和炸弹留在手上没出的不算）\n\n

        明牌\n\n
        明地主或暗地主在摸牌结束后可声明明牌，亮明全部地主身份。若这样做，则当局分数结算时 * 2\n\n

        春天\n\n
        牌局结束时，输方任何没出牌的玩家输分 * 2
    </string>
    <string name="str_layout_settings_specific_h3">麻將說明</string>
    <string name="str_layout_settings_specific_c3">
        （暂无）\n\n
    </string>
    <string name="str_layout_settings_specific_h4">系統說明</string>
    <string name="str_layout_settings_specific_c4">
        （暂无）\n\n
    </string>
    <string name="menu_set">設定</string>
    <string name="menu_zero">歸零</string>
    <string name="menu_recover">恢復</string>
    <string name="menu_modify">手改</string>
    <string name="menu_history">歷史</string>
    <string name="text_def_p1_name">壹</string>
    <string name="text_def_p2_name">贰</string>
    <string name="text_def_p3_name">叁</string>
    <string name="text_def_p4_name">肆</string>
    <string name="text_def_p5_name">伍</string>
    <string name="text_def_p1_name_indi">玩家壹</string>
    <string name="text_def_p2_name_indi">玩家贰</string>
    <string name="text_def_p3_name_indi">玩家叁</string>
    <string name="text_def_p4_name_indi">玩家肆</string>
    <string name="text_def_p5_name_indi">玩家伍</string>
    <string name="text_colum_date">時間</string>
    <string name="text_colum_p1">P1</string>
    <string name="text_colum_p2">P2</string>
    <string name="text_colum_p3">P3</string>
    <string name="text_colum_p4">P4</string>
    <string name="text_colum_p5">P5</string>
    <string name="text_colum_da_times">勝次</string>
    <string name="text_colum_da_lltimes">地次</string>
    <string name="text_colum_isll">地贏</string>
    <string name="text_colum_ismt">手改</string>
    <string name="text_colum_counter_ll">地</string>
    <string name="text_colum_counter_win">勝</string>
    <string name="text_tips_bannkazu">番數</string>
    <string name="text_tips_basepoints">底分</string>
    <string name="title_app">春番</string>
    <string name="title_ll3_main">叁人鬥地主篇</string>
    <string name="title_ll3_sub_main">請依次輸入叁名玩家名稱或代號</string>
    <string name="title_ll5_main">伍人鬥地主篇</string>
    <string name="title_ll5_sub_main">請依次輸入伍名玩家名稱或代號</string>
    <string name="title_main">春春醬的番數計算器</string>
    <string name="title_sub_main">請選擇將要進行的遊戲</string>
    <string name="title_mt_main">請手動輸入玩家分數</string>
    <string name="value_def_zero">0</string>
    <string name="value_def_one">1</string>
    <string name="value_def_add">+</string>
    <string name="value_def_sub">-</string>
    <string name="value_def_date">2016-05-18</string>
    <string name="value_def_history_points">777</string>
    <string name="value_def_is_flag">-</string>
    <string name="checkbox_spring1">春天</string>
    <string name="checkbox_spring2">春天（一方玩家未出牌）</string>
    <string name="tog_btn_ll">地主</string>
    <string name="tog_btn_fm">農民</string>
    <string name="btn_game_start">開始遊戲</string>
    <string name="btn_farmer_win">農民贏</string>
    <string name="btn_landlord_win">地主勝</string>
    <string name="btn_ok_short">吼啊</string>
    <string name="btn_ok_long">皮卡丘決定是你了</string>
    <string name="btn_no_short">算了</string>
    <string name="btn_no_long">NO~沒有金坷垃</string>
    <string name="btn_main_choose_3">叁人鬥地主</string>
    <string name="btn_main_choose_5">伍人鬥地主</string>
    <string name="btn_main_choose_mj">四人麻將</string>
    <string name="btn_settings_clean_sp">清空緩存</string>
    <string name="btn_settings_clean_db">清空歷史</string>
    <string name="btn_settings_specitication">玩法指南</string>
    <string name="btn_settings_financing">贊助作者</string>

</resources>
