<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:id="@+id/main_title"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sub_main"
        android:id="@+id/main_introduction"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/main_title"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_choose_3"
        android:id="@+id/main_btn_ll3"
        android:layout_centerHorizontal="true"
        android:background="@color/Green"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:layout_below="@id/main_introduction"
        android:layout_marginTop="50dp"/>

    <Button
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_choose_5"
        android:id="@+id/main_btn_ll5"
        android:layout_centerHorizontal="true"
        android:background="@color/Yellow"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:layout_below="@id/main_btn_ll3"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_choose_mj"
        android:id="@+id/main_btn_mj"
        android:layout_centerHorizontal="true"
        android:background="@color/Blue"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:layout_below="@id/main_btn_ll5"
        android:layout_marginTop="25dp"/>





</RelativeLayout>