<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_ll3_main"
        android:id="@+id/intro3_textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_ll3_sub_main"
        android:id="@+id/intro3_textView2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/intro3_textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_def_p1_name_indi"
        android:id="@+id/intro3_textView3"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/intro3_textView2"
        android:layout_alignLeft="@+id/intro3_textView4"
        android:layout_alignStart="@+id/intro3_textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_def_p2_name_indi"
        android:id="@+id/intro3_textView4"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/intro3_textView3"
        android:layout_alignLeft="@+id/intro3_textView2"
        android:layout_alignStart="@+id/intro3_textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_def_p3_name_indi"
        android:id="@+id/intro3_textView5"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/intro3_textView4"
        android:layout_alignLeft="@+id/intro3_textView4"
        android:layout_alignStart="@+id/intro3_textView4" />

    <Button
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_game_start"
        android:id="@+id/intro3_start_button"
        android:layout_below="@+id/intro3_textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@color/lightYellow"/>

    <EditText
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:id="@+id/intro3_pName1"
        android:layout_above="@+id/intro3_textView4"
        android:layout_alignRight="@+id/intro3_textView2"
        android:layout_alignEnd="@+id/intro3_textView2" />

    <EditText
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:id="@+id/intro3_pName2"
        android:layout_above="@+id/intro3_textView5"
        android:layout_alignRight="@+id/intro3_pName1"
        android:layout_alignEnd="@+id/intro3_pName1" />

    <EditText
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:id="@+id/intro3_pName3"
        android:layout_alignBottom="@+id/intro3_textView5"
        android:layout_alignRight="@+id/intro3_pName2"
        android:layout_alignEnd="@+id/intro3_pName2" />

</RelativeLayout>