<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:background="@color/lightGreen">

        <TextView
            android:id="@+id/dialog_tm3_clm1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:text="@string/text_colum_date"/>

        <TextView
            android:id="@+id/dialog_tm3_clm2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/dialog_tm3_clm1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/text_colum_p1"/>
        <TextView
            android:id="@+id/dialog_tm3_clm3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/dialog_tm3_clm2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/text_colum_p2"/>
        <TextView
            android:id="@+id/dialog_tm3_clm4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/dialog_tm3_clm3"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/text_colum_p3"/>
        <TextView
            android:id="@+id/dialog_tm3_clm7"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/dialog_tm3_clm8"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/text_colum_isll"/>
        <TextView
            android:id="@+id/dialog_tm3_clm8"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:paddingRight="18dp"
            android:text="@string/text_colum_ismt"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_below="@id/dialog_tm3_clm1"
            android:id="@+id/data_analysis_lot1">
            <TextView
                android:id="@+id/dialog_da3_wtt"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:paddingLeft="15dp"
                android:text="@string/text_colum_da_times"/>

            <TextView
                android:id="@+id/dialog_da3_wt_p1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/dialog_da3_wtt"
                android:layout_marginLeft="30dp"
                android:text="@string/value_def_sub"/>
            <TextView
                android:id="@+id/dialog_da3_wt_p2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/dialog_da3_wt_p1"
                android:layout_marginLeft="15dp"
                android:text="@string/value_def_sub"/>
            <TextView
                android:id="@+id/dialog_da3_wt_p3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/dialog_da3_wt_p2"
                android:layout_marginLeft="15dp"
                android:text="@string/value_def_sub"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_below="@id/data_analysis_lot1"
            android:id="@+id/data_analysis_lot2">
            <TextView
                android:id="@+id/dialog_da3_lltt"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:paddingLeft="15dp"
                android:text="@string/text_colum_da_lltimes"/>

            <TextView
                android:id="@+id/dialog_da3_llt_p1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/dialog_da3_lltt"
                android:layout_marginLeft="30dp"
                android:text="@string/value_def_sub"/>
            <TextView
                android:id="@+id/dialog_da3_llt_p2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/dialog_da3_llt_p1"
                android:layout_marginLeft="15dp"
                android:text="@string/value_def_sub"/>
            <TextView
                android:id="@+id/dialog_da3_llt_p3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/dialog_da3_llt_p2"
                android:layout_marginLeft="15dp"
                android:text="@string/value_def_sub"/>
        </RelativeLayout>


        <Button
            android:id="@+id/dialog_tm3_cbtn"
            android:text="@string/btn_ok_long"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

        <Button
            android:id="@+id/dialog_tm3_ccbtn"
            android:text="@string/btn_no_long"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>

        <ListView
            android:id="@+id/dialog_tm3_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/lightBlack"
            android:dividerHeight="1dp"
            android:drawSelectorOnTop="false"
            android:scrollbars="horizontal|vertical"
            android:fastScrollEnabled="true"
            android:listSelector="@color/teaGreen"
            android:layout_below="@id/data_analysis_lot2"
            android:layout_above="@id/dialog_tm3_cbtn"/>


    </RelativeLayout>

</LinearLayout>