<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cell3_tv1"
        android:textSize="8dp"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/value_def_date"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/cell3_tv2"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:textSize="12dp"
        android:text="@string/value_def_history_points"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/cell3_tv1"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/cell3_tv3"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:textSize="12dp"
        android:text="@string/value_def_history_points"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/cell3_tv2"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:id="@+id/cell3_tv4"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:textSize="12dp"
        android:text="@string/value_def_history_points"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/cell3_tv3"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:id="@+id/cell3_tv7"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:textSize="12dp"
        android:text="@string/value_def_is_flag"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/cell3_tv8"
        android:layout_marginRight="21dp"/>

    <TextView
        android:id="@+id/cell3_tv8"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:textSize="12dp"
        android:text="@string/value_def_is_flag"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:paddingRight="15dp"/>

</RelativeLayout>
